--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -169,7 +169,7 @@ char_del_level: 0
 // Amount of time in seconds by which the character deletion is delayed.
 // Default: 86400 (24 hours)
 // NOTE: Requires client 2010-08-03aragexeRE or newer.
-char_del_delay: 86400
+char_del_delay: 0
 
 // Restrict character deletion by email address or birthdate.
 // This restricts players from changing the langtype and deleting characters.
@@ -209,8 +209,8 @@ db_path: db
 //===================================
 // NOTE: Requires client 2011-03-09aragexeRE or newer.
 // A window is opened before you can select your character and you will have to enter a pincode by using only your mouse.
-// Default: yes
-pincode_enabled: yes
+// Default: yes 
+pincode_enabled: no
 
 // How often does a user have to change his pincode?
 // 0: never (default)
